# dopshy-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  init-ssl.sh
.github/: CODEOWNERS
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/api/dependencies/: auth.py  repository.py  service.py  session.py
backend/src/api/routes/: account.py  authentication.py  booking.py  bot_status.py  field.py  history.py
backend/src/config/settings/: base.py  production.py  staging.py
backend/src/models/db/: account.py  booking.py  field.py
backend/src/models/enums/: booking.py  field.py  role.py
backend/src/models/schemas/: account.py  base.py  booking.py  bot_status.py  field.py  jwt.py
backend/src/repository/: base.py  database.py  events.py  seeder.py
backend/src/repository/crud/: account.py  booking.py  field.py
backend/src/repository/migrations/: env.py
backend/src/repository/migrations/versions/: 2026_07_18_1534-7b8e1bbfdf3f_initial_schema.py
backend/src/securities/authorizations/: jwt.py
backend/src/services/: account.py  booking.py  bot_status.py  field.py  history.py
backend/src/utilities/email/: smtp.py
backend/src/utilities/exceptions/http/: exc_400.py  exc_401.py  exc_404.py
backend/src/utilities/messages/exceptions/http/: exc_details.py
nginx/: nginx.conf  nginx.ssl.conf
